# visa

./: .gitignore  COPYING  Makefile.am  README  acinclude.m4  configure.ac
build-aux/: .gitignore
doc/: .gitignore  readme.texi  titlepage.texi
visa.xcodeproj/: project.pbxproj
